--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Lato:wght@300&family=Poiret+One&display=swap');
+
+@layer base {
+    html, body, #root {
+      @apply h-full;
+      @apply dark:bg-slate-900;
+    }
+}
